tests/NormalTests/paczka1/small_fuzzy/10289531.err
Error in line 8: 3Oq S250 96,7
Error in line 14: XQtvc4W S2$0 41,2
